@@ -3,7 +3,11 @@ racket/base: add progress-evt?, thread-cell-values?, prefab-key?,
  semaphore-peek-evt?, channel-put-evt?
 Changed #lang for most languages so that it cannot be nested;
  this change is within syntax/module-reader and applies to
- racket, racket/base, and more
+ racket, racket/base, and morea
+racket/com: don't always infer 'any for the element type of a
+ multidimensional array 
+Changed local-expand to not add core forms if the stop list has
+ just module*
 
 Version 5.3.0.9
 Changed the format of error messages
